# streamlit-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
data/: 2023_2024_pl_standings.csv
src/: database.py  main.py
