[tool.poetry]
name = "app"
version = "0.1.0"
description = "Streamlit Template"
authors = ["Tiago Vinicius <vinicius.remigio@gmail.com>"]
package-mode = true

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "1.36.0"
streamlit-searchbox = "~0.1"
duckdb = "1.0.0"
loguru = "0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-html="^4.1.1"
black = "^22.3.0"
flake8 = "^3.9.2"
mypy = "1.8.0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"